[package]
name = "eq-log-reader-relay"
version = "0.1.0"
authors = ["Martin Garton <mgarton@utilitywarehouse.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = {version="0.4.0"}
ctrlc = "3.1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"

[dev-dependencies]
tempfile = "3.1.0"

[profile.release]
debug = true
# lto = true
